fix z-index of mobile menu so not blocked by page title

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -30,10 +30,10 @@
 }
 
 .site-main {
-	@include flex-column;
-	align-items: center;
 	text-align: center;
-	height: auto;
+	position: relative;
+	top: 6vh;
+    margin: 10px 0;
 }
 
 .entry-title {
